add jdk.incubator.vector module support for JDK 20+ (#8601) (#9494)
* add jdk.incubator.vector module support for JDK 20+

Adds support for the incubating jdk vector package (PANAMA) when using
jdk 20+ runtime.



* update changelog and fix typo



---------


(cherry picked from commit 62b66e56b9eddda1313a71ca90f2e95f45cdec5d)

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>
Signed-off-by: Heemin Kim <heemin@amazon.com>
Co-authored-by: Nick Knize <nknize@apache.org>